# RichaudBot

./: .gitignore  Cargo.toml
src/: commands.rs  lib.rs  main.rs  tray.rs
